# Homelander

./: .dockerignore  .gitignore  README.md  changelog.md  docker-compose.yml  example.env  pyproject.toml
docker/: Dockerfile  base_image.Dockerfile
src/: config.py  main.py
src/ai/: client.py
src/bot/: config.py  dto.py  handlers.py  helpers.py  main.py  managers.py
src/bot/migrations/: 0001_initial.py  0003_create_feed_data_tab.py
src/shared_tools/: constants.py  interfaces.py  utils.py
src/storage/: db.py  repositories.py  runner.py
src/tg/: bot.py  conf.py  dto.py  handlers.py  helpers.py  keyboards.py  managers.py  middlewares.py
src/tg/migrations/: 0002_create_user_tab.py  0003_create_feed_data_tab.py
