[project]
name = "homelander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.26.0",
    "aiosqlite==0.22.1",
    "elevenlabs==2.39.0",
    "google-genai==1.66.0",
    "matplotlib>=3.10.8",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]
